--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="nav__logo">
             <a href="#" class="logo">
               <img src="assets/logo.jpg" alt="logo" />
-              <span>JADEE Food</span>
+              <span>Jadee</span>
             </a>
           </div>
           <div class="nav__menu__btn" id="menu-btn">
