--- a/index.html
+++ b/index.html
@@ -105,79 +105,67 @@
           <!-- Slides -->
           <div class="swiper-slide">
             <div class="menu__card">
+              <a href="assets/menu-1.jpg" data-lightbox="models" data-title="Canton Special 70Grams">
               <img src="assets/menu-1.jpg" alt="menu" />
               <div class="menu__card__details">
                 <h4>LIDO</h4>
                 <h5><span>MIKI</span>Canton Special</h5>
-                <a href="#">
-                  70 GRAMS
-                  <span><i class="ri-arrow-right-line"></i></span>
-                </a>
+              </a>
               </div>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="menu__card">
+              <a href="assets/menu-2.jpg" data-lightbox="models" data-title="Canton Special 450Grams">
               <img src="assets/menu-2.jpg" alt="menu" />
               <div class="menu__card__details">
                 <h4>LIDO</h4>
                 <h5><span>MIKI</span>Canton Special</h5>
-                <a href="#">
-                  450 GRAMS
-                  <span><i class="ri-arrow-right-line"></i></span>
-                </a>
+              </a>
               </div>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="menu__card">
+              <a href="assets/menu-3.jpg" data-lightbox="models" data-title="Canton Special 1000Grams">
               <img src="assets/menu-3.jpg" alt="menu" />
               <div class="menu__card__details">
                 <h4>LIDO</h4>
                 <h5><span>MIKI</span>Canton Special</h5>
-                <a href="#">
-                  1000 GRAMS
-                  <span><i class="ri-arrow-right-line"></i></span>
-                </a>
+              </a>
               </div>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="menu__card">
+              <a href="assets/menu-4.jpg" data-lightbox="models" data-title="Dried Miki">
               <img src="assets/menu-4.jpg" alt="menu" />
               <div class="menu__card__details">
                 <h4>LIDO</h4>
                 <h5><span>MIKI</span>Dried</h5>
-                <a href="#">
-                  50 GRAMS
-                  <span><i class="ri-arrow-right-line"></i></span>
                 </a>
               </div>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="menu__card">
+              <a href="assets/menu-5.jpg" data-lightbox="models" data-title="Niladit Miki">
               <img src="assets/menu-5.jpg" alt="menu" />
               <div class="menu__card__details">
                 <h4>LIDO</h4>
                 <h5><span>MIKI</span>Niladit</h5>
-                <a href="#">
-                  250 GRAMS
-                  <span><i class="ri-arrow-right-line"></i></span>
-                </a>
+              </a>
               </div>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="menu__card">
+              <a href="assets/menu-6.jpg" data-lightbox="models" data-title="Cabagan">
               <img src="assets/menu-6.jpg" alt="menu" />
               <div class="menu__card__details">
                 <h4>LIDO</h4>
                 <h5><span>MIKI</span>Cabagan</h5>
-                <a href="#">
-                  5 KG
-                  <span><i class="ri-arrow-right-line"></i></span>
-                </a>
+              </a>
               </div>
             </div>
           </div>
