Rename logo header

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </div>
         </div>
         <ul class="nav__links" id="nav-links">
-          <li><a href="#home">Why JADEE Food</a></li>
+          <li><a href="#home">Why Jadee</a></li>
           <li><a href="#service">Services</a></li>
           <li><a href="#menu">Menu</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -234,7 +234,7 @@
           <div class="footer__logo">
             <a href="#" class="logo">
               <img src="assets/logo.jpg" alt="logo" />
-              <span>JD FOOD</span>
+              <span>Jadee</span>
             </a>
           </div>
           <p class="section__description">
